--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,26 @@
 <html>
 <head>
-<title>ImportPocket</title>
+<title>ChromeToPocket</title>
+  <script src="import.js"></script>
+  <style> 
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    html, body {
+      height: 800px;
+      overflow: hidden;
+    }
+    #progress {
+      height: 100%;
+      width: 800px;
+      overflow: auto;
+    }
+  </style> 
 </head>
 <body>
-  <script src="jquery-2.1.3.min.js"></script>
-  <script src="import.js"></script>
+<div id="progress" height="">
+</div>
 </body>
 </html>
 
