Added spinner in UI
Removed URL listing in UI view

--- a/popup.html
+++ b/popup.html
@@ -1,26 +1,23 @@
 <html>
-<head>
-<title>ChromeToPocket</title>
-  <script src="import.js"></script>
-  <style> 
-    * {
-      margin: 0;
-      padding: 0;
-    }
-    html, body {
-      height: 800px;
-      overflow: hidden;
-    }
-    #progress {
-      height: 100%;
-      width: 800px;
-      overflow: auto;
-    }
-  </style> 
-</head>
-<body>
-<div id="progress" height="">
-</div>
-</body>
+  <head>
+    <title>ChromeToPocket</title>
+    <script src="import.js"></script>
+    <style> 
+      * {
+        margin: 5;
+        padding: 5;
+      }
+      html, body {
+        overflow: auto;
+      }
+      #progress {
+        overflow: auto;
+      }
+    </style> 
+  </head>
+  <body>
+      <div id="progress-icon"></div>
+      <div id="progress-text"></div>
+  </body>
 </html>
 
